--- a/css/main.css
+++ b/css/main.css
@@ -800,7 +800,7 @@ a {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-image: url("/img/gallery/car.png");
+  background-image: url("/img/gallery/car\ \(1\).png");
 }
 @media screen and (min-width: 1200px) {
   .gallery {
